# Crowd-Management-System-software

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  SRS_CrowdManagementSystem.md  app.py  package-lock.json  room_capacity.py  yolo_inference.py
Crowd-Management-System-software-main/: app.py  pyproject.toml  requirements.txt  room_capacity.py  yolo_inference.py
Crowd-Management-System-software-main/dataset/: data.yaml
Crowd-Management-System-software-main/dataset/labels/train/: 0001.txt  0010.txt  0012.txt  0014.txt  0015.txt  0017.txt  0023.txt  0025.txt  0027.txt  0035.txt  0036.txt  0038.txt  0039.txt  0044.txt  0048.txt  0049.txt  0050.txt  0063.txt  0064.txt  0067.txt  0069.txt  0072.txt  0073.txt  0076.txt  0078.txt  0084.txt  0088.txt  0089.txt  0100.txt  0101.txt  0106.txt  0107.txt  0108.txt  0112.txt  0122.txt  0126.txt  0127.txt  0128.txt  0135.txt  0141.txt  (+1123 more)
Crowd-Management-System-software-main/dataset/labels/val/: 0007.txt  0011.txt  0042.txt  0092.txt  0105.txt  0111.txt  0116.txt  0125.txt  0133.txt  0138.txt  0156.txt  0162.txt  0164.txt  0179.txt  0181.txt  0208.txt  0210.txt  0221.txt  0249.txt  0282.txt  0304.txt  0305.txt  0317.txt  0340.txt  0343.txt  0348.txt  0388.txt  0395.txt  0399.txt  0430.txt  0451.txt  0486.txt  0490.txt  0530.txt  0545.txt  0546.txt  0557.txt  0612.txt  0633.txt  0671.txt  (+207 more)
Crowd-Management-System-software-main/static/css/: style.css
dataset/labels/train/: 0008.txt  0018.txt  0019.txt  0021.txt  0022.txt  0026.txt  0029.txt  0030.txt  0031.txt  (+1092 more)
templates/: index.html  live_camera.html  live_preview.html
(+252 files in other folders)
