[project]
name = "crowd-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy<2.0",
    "opencv-python==4.7.0.72",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.150",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.3",
    "setuptools>=80.9.0",
]
